# chess-board

./: chess_board.ipynb  pyproject.toml
