[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["Robert Radford <RobertR928@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"
numpy = "1.19.3"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
